[package]
name = "usd-iroh-resolver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.79"
bbl-usd = { version = "0.1.0", path = "../bbl-usd-rs" }
bytes = "1.5.0"
ctor = "0.2.6"
futures-util = "0.3.30"
iroh = { path = "../iroh/iroh"}
lazy_static = "1.4.0"
tokio = "1.35.1"
